feat(package): update package information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "Parens"
+    "Parens",
+    "Trường"
   ],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#2f7c47",
